# kelvin-helmholtz-2d-solver

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: basic_shear.txt  double_shear.txt  forced.txt  rotating.txt
src/kh2d_solver/: __init__.py  cli.py
src/kh2d_solver/core/: __init__.py  initial_conditions.py  solver.py
src/kh2d_solver/io/: config_manager.py  data_handler.py
src/kh2d_solver/utils/: logger.py  timer.py
src/kh2d_solver/visualization/: __init__.py  animator.py
