[tool.poetry]
name = "kh2d-solver"
version = "0.1.3"
description = "A high-performance solver for 2D Kelvin-Helmholtz instability with Numba acceleration"
authors = [
    "Sandy H. S. Herho <sandy.herho@email.ucr.edu>",
    "Nurjanna J. Trilaksono <jpatiani@itb.ac.id>",
    "Faiz R. Fajary <faizrohman@itb.ac.id>",
    "Gandhi Napitupulu <gandhinapitupulu88@gmail.com>",
    "Iwan P. Anwar <iwanpanwar@itb.ac.id>",
    "Faruq Khadami <fkhadami@itb.ac.id>"
]
license = "WTFPL"
readme = "README.md"
homepage = "https://github.com/sandyherho/kelvin-helmholtz-2d-solver"
repository = "https://github.com/sandyherho/kelvin-helmholtz-2d-solver"
documentation = "https://github.com/sandyherho/kelvin-helmholtz-2d-solver/blob/main/README.md"
keywords = ["fluid-dynamics", "kelvin-helmholtz", "instability", "CFD", "numerical-simulation", "numba"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Operating System :: OS Independent",
    "Natural Language :: English"
]
packages = [{include = "kh2d_solver", from = "src"}]
include = [
    "configs/*.txt",
    "LICENSE",
    "README.md"
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.20.0"
scipy = ">=1.7.0"
matplotlib = ">=3.3.0"
netCDF4 = ">=1.5.0"
tqdm = ">=4.60.0"
numba = ">=0.53.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0.0"
black = ">=22.0.0"
flake8 = ">=4.0.0"
ipython = ">=7.0.0"
pytest-cov = ">=3.0.0"
mypy = ">=0.900"

[tool.poetry.scripts]
kh2d-simulate = "kh2d_solver.cli:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py"
]
